Fix the overflow behaviour for product cards

--- a/services/nginx/static/css/catalog.css
+++ b/services/nginx/static/css/catalog.css
@@ -109,12 +109,23 @@ body {
     font-weight: bold;
     font-size: 18px;
     margin-bottom: 4px;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 100%;
+    word-break: break-word;
 }
 
 .seller-name {
-    color: #005bff;
+    color: #525252;
     font-size: 14px;
-    margin-bottom: 8px;
+    font-weight: 700;
+    margin: 2px 0 2px;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    width: 100%;
+    word-break: break-word;
 }
 
 .name {
@@ -125,6 +136,8 @@ body {
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    width: 100%;
+    word-break: break-word;
 }
 
 .rating {
@@ -214,40 +227,4 @@ body {
     text-align: center;
     color: #333;
 }
-
-/* Адаптивность */
-/*
-@media (max-width: 1200px) {
-    .products-grid {
-        grid-template-columns: repeat(4, 1fr);
-    }
-}
-
-@media (max-width: 992px) {
-    .products-grid {
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
-
-@media (max-width: 768px) {
-    .products-grid {
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
-
-@media (max-width: 576px) {
-    .products-grid {
-        grid-template-columns: 1fr;
-    }
-
-    .content-box {
-        padding: 16px;
-        border-radius: 20px;
-    }
-
-    .main-content {
-        padding: 0 16px;
-    }
-}
-*/
 
